# mid2json

./: Cargo.toml  default_event_layer.json  generated  readme.md
src/: conversation.rs  main.rs  rpe.rs
test_assets/: abyss.mid
