[package]
name = "mid2json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="*",features = ["derive"]}
serde_json = "*"
clap = {version="~4.3.2", features= ["derive"]}
midly = "*"
devault = "*"
